kubernetes/mongodb-operator/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    checkov.io/skip1: CKV_K8S_40=OpenShift Injects Random UID
    checkov.io/skip2: CKV_K8S_9=Not Supported
    checkov.io/skip3: CKV_K8S_8=Not Supported
    checkov.io/skip4: CKV_K8S_38=Operator
  name: mongodb-kubernetes-operator
  namespace: mongodb-operator
spec:
  replicas: 0
  selector:
    matchLabels:
      name: mongodb-kubernetes-operator
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: mongodb-kubernetes-operator
    spec:
      restartPolicy: Always
      schedulerName: default-scheduler
      dnsPolicy: ClusterFirst
      automountServiceAccountToken: true
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: name
                    operator: In
                    values:
                      - mongodb-kubernetes-operator
              topologyKey: kubernetes.io/hostname
      containers:
        - command:
            - /usr/local/bin/entrypoint
          image: quay.io/mongodb/mongodb-kubernetes-operator:0.10.0@sha256:76cd4db62ad61a15f9231ba58f1ffd7654c7b183d1e257c707a0575fd22e5ed2
          imagePullPolicy: IfNotPresent
          name: mongodb-kubernetes-operator
          securityContext:
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            privileged: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          resizePolicy:
            - resourceName: cpu
              restartPolicy: NotRequired
            - resourceName: memory
              restartPolicy: NotRequired
          resources:
            limits:
              cpu: 100m
              memory: 512Mi
            requests:
              cpu: 5m
              memory: 200Mi
      serviceAccountName: mongodb-kubernetes-operator
      enableServiceLinks: false
